# voxelith

./: .echoforge.yml  .env.example  .gitignore  ARBORESCENCE.md  Cargo.toml  README.md  STATE.md  TODO.md  restart.sh  start.sh  stop.sh
app/: Cargo.toml
app/src/: chat.rs  edit.rs  hud.rs  input.rs  main.rs  menu.rs  player.rs  stream.rs  ui_kit.rs  world_save.rs
assets/shaders/: terrain.wgsl  ui.wgsl
crates/voxel-mesh/: Cargo.toml
crates/voxel-mesh/src/: cull.rs  greedy.rs  lib.rs  vertex.rs
crates/voxel-render/: Cargo.toml
crates/voxel-render/src/: camera.rs  frustum.rs  gpu.rs  lib.rs  pipeline.rs  renderer.rs  texture.rs
crates/voxel-render/src/ui/: batch.rs  font5x7.rs  mod.rs  overlay.rs
crates/voxel-world/: Cargo.toml
crates/voxel-world/src/: biome.rs  block.rs  chunk.rs  gen.rs  lib.rs  palette.rs  registry.rs  store.rs  texture.rs  world.rs  worldgen.rs
docs/: ROADMAP.md  render-pipeline-v1.html
