[package]
name = "voxelith"
version = "0.1.0"
edition.workspace = true
license.workspace = true
default-run = "voxelith"

[[bin]]
name = "voxelith"
path = "src/main.rs"

[dependencies]
voxel-world.workspace = true
voxel-mesh.workspace = true
voxel-render.workspace = true
winit.workspace = true
glam.workspace = true
pollster.workspace = true
rayon.workspace = true
crossbeam-channel.workspace = true
log.workspace = true
env_logger.workspace = true
